--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -315,12 +315,16 @@
     "ReviewCompletionTime": "審核完成時間",
     "RefundReview": "退款審核",
     "PendingReview": "待審核",
+    "Pending": "待審核",
     "Refunded": "已退款",
     "Processing": "處理中",
     "Success": "退款成功",
     "Fail": "退款失敗",
     "ReturnedApplication": "審核失敗",
     "Approver": "審核人員",
+    "Approve ": "通過",
+    "Reject": "駁回",
+
     "Refunder": "退款人員",
     "MerchantRemark": "備註",
     "Enum:TenantStatus.0": "正常",
@@ -525,7 +529,7 @@
     "VoidReason": "作廢原因",
     "CreditNoteReason": "折讓原因",
     "LastUpdatedDate": "最後更新時間",
-    "Succeeded": "成功",
+    "Succeeded": "退貨完成",
     "Failed": "失敗",
     "Orignal": "原訂單",
     "Split": "拆單",
