fix for Pik-225

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -515,7 +515,7 @@
     "PleaseEnterThresholdAmount": "Please Enter Threshold Amount",
     "Exchange": "Exchange",
     "Reject": "Reject",
-
+    "Groupbuyhaveorderitsnotdeleteable": "Groupbuy have order its not deleteable"
 
 
 
