--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -515,8 +515,8 @@
     "PleaseEnterThresholdAmount": "Please Enter Threshold Amount",
     "Exchange": "Exchange",
     "Reject": "Reject",
-    "Groupbuyhaveorderitsnotdeleteable": "Groupbuy have order its not deleteable"
-
+    "Groupbuyhaveorderitsnotdeleteable": "Groupbuy have order its not deleteable",
+    "InvoiceIssueSuccessfully": "Invoice Issue Successfully"
 
 
   }
