--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -545,8 +545,8 @@
     "Return": "退貨",
     "PleaseEnterThresholdAmount": "請輸入免運門檻",
     "Exchange": "換貨",
-    "Groupbuyhaveorderitsnotdeleteable": "無法刪除已有訂單團購"
-
+    "Groupbuyhaveorderitsnotdeleteable": "無法刪除已有訂單團購",
+    "InvoiceIssueSuccessfully": "發票開立成功"
 
   }
 }
