--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -322,6 +322,8 @@
     "Fail": "Fail",
     "ReturnedApplication": "Returned Application",
     "Approver": "Approver",
+    "Approve": "Approve",
+    "ReturnStatus": "Return Status",
     "Refunder": "Refunder",
     "MerchantRemark": "Merchant Remark",
     "Enum:TenantStatus.0": "Open",
