--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -529,6 +529,8 @@
     "Yilan": "宜蘭",
     "Yunlin": "雲林",
     "Zero Tax": "零税",
-    "ZeroTax": "零税"
+    "ZeroTax": "零税",
+    "Approve": "通過",
+    "ReturnStatus": "退換貨狀態"
   }
 }
