--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -537,6 +537,7 @@
     "RefundAmount": "退款金額",
     "Succeeded cash flow": "發票已開立",
     "Succeeded void invoice": "完成",
-    "Succeeded in return": "完成"
+    "Succeeded in return": "完成",
+    "TimePeriod": "團購期間"
   }
 }
