--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -538,6 +538,8 @@
     "Succeeded cash flow": "發票已開立",
     "Succeeded void invoice": "完成",
     "Succeeded in return": "完成",
-    "TimePeriod": "團購期間"
+    "TimePeriod": "團購期間",
+    "Refunds": "退款",
+    "ParentOrderNo": "原訂單號"
   }
 }
