--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -547,6 +547,7 @@
     "PrevPage": "上一頁",
     "NextPage": "下一頁",
     "FirstPage": "第一頁",
-    "LastPage": "最後一頁"
+    "LastPage": "最後一頁",
+    "EditItem": "商品內容"
   }
 }
