--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -462,7 +462,7 @@
     "NonTaxable": "Non Taxable",
     "ZeroTax": "Zero Tax",
     "Threshold": "Threshold",
-    "DeliveryTimePreferance": "Delivery Time Preferance",
+    "DeliveryTimePreference": "Delivery Time Preference",
     "SelectGroupBuy": "Select GroupBuy",
     "Shipped": "Shipped",
     "ManualStatusUpdate": "Manual Status Update",
@@ -536,6 +536,24 @@
     "ToBeShipped": "To Be Shipped",
     "Delivered": "Delivered",
     "Return": "Return",
-    "EnterpricePurchase": "Enterprice Purchase"
+    "EnterpricePurchase": "Enterprice Purchase",
+    "TCatDelivery": "t-cat(delivery)",
+    "TCatSevenToEleven": "t-cat(7-11)",
+    "CashOnDelivery": "Cash On Delivery",
+    "GeneralFood": "0001: General Food",
+    "SpecialityProductsSweets": "0002: Specialty Products/Sweets",
+    "AlcoholOilVinegarSauces": "0003: Alcohol/Oil/Vinegar/Sauces",
+    "GrainsVegetablesFruits": "0004: Grains, Vegetables, and Fruits",
+    "SeafoodMeatProducts": "0005: Seafood/Meat Products",
+    "ThreeCConsumerElectronics": "0006: 3C",
+    "HomeAppliances": "0007: Home Appliances",
+    "ClothingandAccessories": "0008: Clothing and Accessories",
+    "HouseholdItems": "0009: Household Items",
+    "BeautyandCosmetics": "0010: Beauty and Cosmetics",
+    "HealthSupplements": "0011: Health Supplements",
+    "MedicalSupplies": "0012: Medical Supplies",
+    "PetSuppliesandFeed": "0013: Pet Supplies and Feed",
+    "PrintedMaterials": "0014: Printed Materials",
+    "Others": "0015: Others"
   }
 }
