--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -108,7 +108,7 @@
     "DeliveryTemperature": "溫層",
     "DeliveryTemperatureCost": "溫層運費成本",
     "DeliveryTime": "收貨時間",
-    "DeliveryTimePreferance": "收貨時間",
+    "DeliveryTimePreference": "收貨時間",
     "Display": "顯示",
     "DownloadExcel": "下載Excel",
     "EcPay": "綠界支付",
