--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -46,7 +46,8 @@
     "Save": "Save",
     "Upload": "Upload",
     "SelectAll": "Select All",
-
+    "ActivityEndDateWarning": "Activity end date cannot be less than Activity start date",
+    "ActivityStartDateWarning": "Activity start date cannot be greater than activity end date",
     //items
     "NewItem": "New Item",
     "EditItem": "Edit Item",
