--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -483,7 +483,7 @@
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
     "Taichung": "台中",
     "Tainan": "台南",
-    "TaipeiCity": "台北市",
+    "TaipeiCity": "臺北市",
     "Taitung": "台東",
     "Taoyuan": "桃園",
     "Taxable": "應稅",
@@ -553,6 +553,24 @@
     "Return": "被退件",
     "EnterpricePurchase": "企業採購",
     "ActivityEndDateWarning": "活動結束日期不能小於活動開始日期",
-    "ActivityStartDateWarning": "活動開始日期不能大於活動結束日期"
+    "ActivityStartDateWarning": "活動開始日期不能大於活動結束日期",
+    "KeelungCity": "基隆市",
+    "HsinchuCity": "新竹市",
+    "TaoyuanCity": "桃園市",
+    "YilanCountry": "宜蘭縣",
+    "TaichungCity": "臺中市",
+    "MiaoliCountry": "苗栗縣",
+    "ChanghuaCountry": "彰化縣",
+    "NantouCountry": "南投縣",
+    "YunlinCountry": "雲林縣",
+    "KaohsiungCity": "高雄市",
+    "TainanCity": "臺南市",
+    "ChiayiCountry": "嘉義縣",
+    "PingtungCountry": "屏東縣",
+    "HualienCountry": "花蓮縣",
+    "TaitungCountry": "臺東縣",
+    "PenghuCountry": "澎湖縣",
+    "KinmenCountry": "金門縣",
+    "LianjiangCountry": "連江縣"
   }
 }
