--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -571,6 +571,7 @@
     "TaitungCountry": "臺東縣",
     "PenghuCountry": "澎湖縣",
     "KinmenCountry": "金門縣",
-    "LianjiangCountry": "連江縣"
+    "LianjiangCountry": "連江縣",
+    "EditRole": "編輯角色"
   }
 }
