--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -572,6 +572,7 @@
     "PenghuCountry": "澎湖縣",
     "KinmenCountry": "金門縣",
     "LianjiangCountry": "連江縣",
-    "EditRole": "編輯角色"
+    "EditRole": "編輯角色",
+    "EditUser": "編輯使用者"
   }
 }
