--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -556,6 +556,7 @@
     "PetSuppliesandFeed": "0013: Pet Supplies and Feed",
     "PrintedMaterials": "0014: Printed Materials",
     "Others": "0015: Others",
-    "EditRole": "Edit Role"
+    "EditRole": "Edit Role",
+    "EditUser": "Edit User"
   }
 }
