--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -75,7 +75,7 @@
     "Combined": "併單",
     "CombineOrders": "合併訂單",
     "CommodityAttributes": "商品屬性",
-    "Completed": "已寄出",
+    "Completed": "已取件",
     "ConfigureYourSKUPattern": "設置SKU格式",
     "ConfigureYourSKUPatternMessage": "選取你想要設置該商品屬性的SKU",
     "CopyItem": "複製商品",
