--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -577,6 +577,7 @@
     "Pikachu:MinimumAmountReachCannotBeEmpty": "最低金額不能為空",
     "Pikachu:MinimumPieceCannotBeEmpty": "最小件數不能為空",
     "Pikachu:GetCannotBeEmptyOrZero": "獲取不能為空或零。",
-    "Pikachu:GetCannotBeGreaterThanGiftableQuantity": "取得不能大於贈送數量"
+    "Pikachu:GetCannotBeGreaterThanGiftableQuantity": "取得不能大於贈送數量",
+    "Pikachu:ProductTypeIsRequired": "產品類型為必填項。"
   }
 }
