--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -56,7 +56,7 @@
     //Cash Flow Settings
     "CashFlowDealerSettings": "金流渠道設定",
     "CellphoneInvoice": "手機載具",
-    "Changhua": "彰化",
+    "Changhua": "彰化縣",
     "ChannelId": "Channel ID",
     "ChannelSecretKey": "Channel Secret Key",
     "CheckoutAmount": "結帳金額",
@@ -174,8 +174,8 @@
     "HashKey": "Hash Key",
     "HideCredention": "團購報表隱藏部分個資",
     "HomeDelivery": "親送",
-    "Hsinchu": "新竹",
-    "Hualien": "花蓮",
+    "Hsinchu": "新竹市",
+    "Hualien": "花蓮縣",
     "Inapplicable": "不指定",
     "IndexAnchor": "段落錨點",
     "InvalidEndDate": "無效的結束日期",
@@ -222,8 +222,8 @@
     "ItemStyleValue": "商品樣式內容",
     "ItemTags": "商品標籤",
     "ItemTemperature": "商品溫層",
-    "Kaohsiung": "高雄",
-    "Keelung": "基隆",
+    "Kaohsiung": "高雄市",
+    "Keelung": "基隆市",
     "Kinmen": "金門",
     "Last": "後置",
     "LastUpdatedDate": "最後更新時間",
@@ -268,11 +268,11 @@
     "MerchantNotes": "商家須知",
     "MerchantRemark": "備註",
     "MerchantRemarks": "商家備註",
-    "Miaoli": "苗栗",
+    "Miaoli": "苗栗縣",
     "MinAvailableTime": "最短可用時間",
     "MinimumAmount": "最低金額",
     "MinimumPiece": "最低數量",
-    "Nantou": "南投",
+    "Nantou": "南投縣",
     //Freebie
     "NewFreebie": "建立新贈品",
     //GroupBuy
@@ -376,7 +376,7 @@
     "Pikachu:SomethingWentWrongWhileDeletingImage": "在刪除圖像時發生錯誤,請稍後再試",
     "Pikachu:SomethingWrongWhileFileUpload": "再上傳檔案時發生問題,請稍後再試",
     "Pikachu:SystemIsUnableToCopyAtTheMoment": "目前無法複製,請稍後再試",
-    "PingDong": "屏東",
+    "PingDong": "屏東縣",
     "PlatformID": "特約合作平台商代號",
     "PleaseContactUs": "取貨前line@客服聯繫",
     "PleaseEnterThresholdAmount": "請輸入免運門檻",
@@ -481,11 +481,11 @@
     "Succeeded": "完成",
     "Success": "退款成功",
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
-    "Taichung": "台中",
-    "Tainan": "台南",
+    "Taichung": "臺中市",
+    "Tainan": "臺南市",
     "TaipeiCity": "臺北市",
-    "Taitung": "台東",
-    "Taoyuan": "桃園",
+    "Taitung": "臺東縣",
+    "Taoyuan": "桃園市",
     "Taxable": "應稅",
     "TaxNumber": "統一編號",
     "TaxTitle": "發票抬頭",
@@ -525,8 +525,8 @@
     "Welcome": "歡迎",
     "WhenOrderReach": "當訂單達到",
     "Yes": "是",
-    "Yilan": "宜蘭",
-    "Yunlin": "雲林",
+    "Yilan": "宜蘭縣",
+    "Yunlin": "雲林縣",
     "Zero Tax": "零税",
     "ZeroTax": "零税",
     "Approve": "通過",
