--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -584,6 +584,8 @@
     "TenantContactTitle": "租戶聯絡人稱呼",
     "TenantContactEmail": "租戶聯絡人信箱",
     "Mr.": "先生",
-    "Ms.": "小姐"
+    "Ms.": "小姐",
+    "DisplayName:Username": "使用者名稱",
+    "NameCannotBeEmpty": "使用者名稱不能為空"
   }
 }
