--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -586,6 +586,7 @@
     "Mr.": "先生",
     "Ms.": "小姐",
     "DisplayName:Username": "使用者名稱",
-    "NameCannotBeEmpty": "使用者名稱不能為空"
+    "NameCannotBeEmpty": "使用者名稱不能為空",
+    "CashOnDelivery": "貨到付款"
   }
 }
