--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -585,7 +585,8 @@
     "TenantContactEmail": "租戶聯絡人信箱",
     "Mr.": "先生",
     "Ms.": "小姐",
-    "DisplayName:Username": "使用者名稱",
+    "DisplayName:name": "使用者名稱",
+    "DisplayName:UserName": "使用者姓名",
     "NameCannotBeEmpty": "使用者名稱不能為空",
     "CashOnDelivery": "貨到付款",
 
