--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -242,6 +242,7 @@
     "MaxAvailableTime": "最長可用時間",
     "Mazu": "馬祖",
     "Menu:CashFlowReconciliationStatement": "金流對帳表",
+    "Menu:DeliveryByStoreSettings": "按商店配送設置",
     "Menu:DeliveryTemperatureCost": "溫層運費成本",
     "Menu:ElectronicInvoiceSetting": "電子發票設定",
     "Menu:FreebiesListView": "贈品清單",
