--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -262,7 +262,7 @@
     "Menu:ProductManagement": "商品管理",
     "Menu:ReturnAndExchangeOrder": "退換貨列表",
     "Menu:SystemManagement": "系統管理",
-    "Menu:TenantBillingReport": "多商戶管理-商戶賬單報表",
+    "Menu:TenantBillingReport": "租戶帳單報表",
     "Menu:VoidInvoice": "作廢/折讓票據",
     "MerchantId": "Merchant ID",
     "MerchantID": "特店編號",
@@ -445,8 +445,6 @@
     "SelfPickup": "自取",
     "SellingPrice": "售價",
     "SellPrice": "售價",
-    "SenderName": "發送者名稱",
-    "SenderPhoneNumber": "發送者電話",
     "SendInterval": "發送間隔",
     "SendTime": "發送時間",
     "SentToBackStage": "已送達後台",
@@ -581,7 +579,6 @@
     "Pikachu:GetCannotBeGreaterThanGiftableQuantity": "取得不能大於贈送數量",
     "Pikachu:ProductTypeIsRequired": "產品類型為必填項。",
     "TenantAdministrator": "租戶管理者",
-    "TenantContactPerson": "租戶聯絡人",
     "TenantContactTitle": "租戶聯絡人稱呼",
     "TenantContactEmail": "租戶聯絡人信箱",
     "Mr.": "先生",
@@ -605,6 +602,31 @@
     "PetSuppliesandFeed": "0013：寵物用品飼料",
     "PrintedMaterials": "0014：印刷品",
     "Others": "0015：其他",
-    "ProductType": "產品類別"
+    "ProductType": "產品類別",
+    "SelectShippingMethod": "請選擇運送方式",
+    "StoreName": "商店名稱",
+    "InvoiceNameDisplay": "發票抬頭顯示",
+    "DaysAfterShipmentToGenerateInvoice": "出貨後幾天開立發票",
+    "DeliveryByStoreSettings": "廠商統一出貨設定",
+    "SenderName": "寄件人姓名",
+    "SenderPhoneNumber": "寄件人手機號碼",
+    "SenderPostalCode": "寄件人郵遞區號",
+    "SenderCity": "寄件人城市",
+    "SenderAddress": "寄件人地址",
+    "Tenants": "租戶列表",
+    "TenantContactPerson": "租戶聯絡人稱呼",
+    "Owner": "租戶管理者",
+    "ShareProfit%": "分潤百分比",
+    "UploadLogo": "上傳 Logo",
+    "UploadBanner": "上傳 Banner",
+    "SelectTenantAdministrator": "請選擇租戶管理者",
+    "SelectContactTitle": "請選擇聯絡人稱呼",
+    "Status": "租戶狀態",
+    "Link": "連結",
+    "TenantName": "租戶名稱",
+    "TotalOrder": "訂單總數",
+    "WatingForShipment": "等待出貨",
+    "SalesAmount": "銷售金額",
+    "AmountReceived": "已收款金額"
   }
 }
