--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1,6 +1,8 @@
 {
   "culture": "zh-Hant",
   "texts": {
+    "FrontPage": "頭版",
+    "CopyPageLink": "複製連結頁面",
     "7-11": "7-11",
     "7-11 frozen": "7-11冷凍",
     "7-11C2C": "7-11 C2C",
