--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -629,6 +629,8 @@
     "TotalOrder": "訂單總數",
     "WatingForShipment": "等待出貨",
     "SalesAmount": "銷售金額",
-    "AmountReceived": "已收款金額"
+    "AmountReceived": "已收款金額",
+    "MerchantTradeNo": "商戶貿易號",
+    "TradeNo": "貿易號"
   }
 }
