PK-152, PK-153, PK-156

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1,6 +1,10 @@
 {
   "culture": "en",
   "texts": {
+    "PaymentStatus": "Payment Status",
+    "RefundChannel": "Refund Channel",
+    "AutomaticRefund": "Automatic Refund",
+    "ManualProcessing": "Manual Processing",
     "FrontPage": "Front Page",
     "CopyPageLink": "Copy Link Page",
     "GoodPoint": "Good Point",
