#PK-167 member details page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -615,6 +615,9 @@
     "Permission:Edit": "Edit",
     "Permission:Delete": "Delete",
     "Menu:Members": "Members",
-    "Menu:MembersList": "Members List"
+    "Menu:MembersList": "Members List",
+    "BasicDetails": "Basic Details",
+    "UserId": "User Id",
+    "LoginMethod": "Login Method"
   }
 }
