--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -621,6 +621,7 @@
     "LoginMethod": "Login Method",
     "DataManagement": "Data Management",
     "DeleteAccount": "Delete Account",
-    "DeleteMemberCautionMessage": "Remove this customer's chart if requested, if not please be aware that what has been deleted can never be brought back."
+    "DeleteMemberCautionMessage": "Remove this customer's chart if requested, if not please be aware that what has been deleted can never be brought back.",
+    "AreYouSureToDeleteThisMember": "Please be aware that once this member is deleted, it can never be restored. Do you wish to delete it?"
   }
 }
