#PK-170 Address dropdown and button style changes

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -626,6 +626,8 @@
     "EditMember": "Edit Member",
     "FullName": "Full Name",
     "EmailAddress": "Email Address",
-    "PhoneNumber": "Phone Number"
+    "PhoneNumber": "Phone Number",
+    "DefaultAddress": "Default Address",
+    "EditAddress": "Edit Address"
   }
 }
