#PK-170 Update UserAddress implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -630,6 +630,7 @@
     "DefaultAddress": "Default Address",
     "EditAddress": "Edit Address",
     "Permission:UserAdresses": "User Adresses",
-    "Permission:SetIsDefault":  "Set Default"
+    "Permission:SetIsDefault": "Set Default",
+    "PostalCode": "Postal Code"
   }
 }
