#PK-168 Linked UserId with Orders

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -631,6 +631,7 @@
     "EditAddress": "Edit Address",
     "Permission:UserAdresses": "User Adresses",
     "Permission:SetIsDefault": "Set Default",
-    "PostalCode": "Postal Code"
+    "PostalCode": "Postal Code",
+    "ToggleFilters": "Toggle Filters"
   }
 }
