#PK-171 User shopping credit backend implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -632,6 +632,10 @@
     "Permission:UserAdresses": "User Adresses",
     "Permission:SetIsDefault": "Set Default",
     "PostalCode": "Postal Code",
-    "ToggleFilters": "Toggle Filters"
+    "ToggleFilters": "Toggle Filters",
+    "Permission:UserShoppingCredits": "User Shopping Credits",
+    "Permission:SetIsActive": "Set Active",
+    "MustBeGreaterThanToday": "{0} must be greater than today.",
+    "Pikachu:ExpirationDateCannotBePast": "The Expiration Date for User Shopping Credits can not be in the past."
   }
 }
